[package]
name = "midi_sample_qzt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.11.4"
midir = "0.9.1"
serde = {version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
symphonia = { version = "0.5.3", features = ["flac", "wav"]}
